# docs/swagger.json
@@ -253,9 +253,6 @@
         "/api/cargo/{cargo_id}/add_to_flight": {
             "post": {
                 "description": "Добавить выбранный груз в черновик полета",
-                "produces": [
-                    "application/json"
-                ],
                 "tags": [
                     "Грузы"
                 ],
@@ -271,10 +268,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/schemes.AddToFlightResp"
-                        }
+                        "description": "OK"
                     }
                 }
             }
@@ -340,19 +334,16 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/schemes.FlightOutput"
-                        }
+                        "description": "OK"
                     }
                 }
             },
             "delete": {
-                "description": "Удаляет черновой полет пользователя",
+                "description": "Удаляет полет-черновик пользователя",
                 "tags": [
                     "Полеты"
                 ],
-                "summary": "Удалить черновой полет",
+                "summary": "Удалить полет-черновик",
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -362,14 +353,14 @@
         },
         "/api/flights/delete_cargo/{cargo_id}": {
             "delete": {
-                "description": "Удалить груз из черного полета пользователя",
+                "description": "Удалить груз из полета-черновика пользователя",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Полеты"
                 ],
-                "summary": "Удалить груз из чернового полета",
+                "summary": "Удалить груз из полета-черновика",
                 "parameters": [
                     {
                         "type": "string",
@@ -381,10 +372,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/schemes.AllCargosResponse"
-                        }
+                        "description": "OK"
                     }
                 }
             }
@@ -398,10 +386,7 @@
                 "summary": "Сформировать полет",
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/schemes.FlightOutput"
-                        }
+                        "description": "OK"
                     }
                 }
             }
@@ -502,10 +487,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/schemes.FlightOutput"
-                        }
+                        "description": "OK"
                     }
                 }
             }
@@ -550,9 +532,6 @@
                 "consumes": [
                     "application/json"
                 ],
-                "produces": [
-                    "application/json"
-                ],
                 "tags": [
                     "Авторизация"
                 ],
@@ -568,9 +547,6 @@
             "post": {
                 "description": "Регистрация нового пользователя",
                 "consumes": [
-                    "application/json"
-                ],
-                "produces": [
                     "application/json"
                 ],
                 "tags": [
@@ -590,10 +566,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/schemes.SwaggerLoginResp"
-                        }
+                        "description": "OK"
                     }
                 }
             }
@@ -655,25 +628,6 @@
                 }
             }
         },
-        "schemes.AddToFlightResp": {
-            "type": "object",
-            "properties": {
-                "cargo_count": {
-                    "type": "integer"
-                }
-            }
-        },
-        "schemes.AllCargosResponse": {
-            "type": "object",
-            "properties": {
-                "cargos": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/ds.Cargo"
-                    }
-                }
-            }
-        },
         "schemes.AllFlightsResponse": {
             "type": "object",
             "properties": {
@@ -731,17 +685,6 @@
                 }
             }
         },
-        "schemes.FlightShort": {
-            "type": "object",
-            "properties": {
-                "cargo_count": {
-                    "type": "integer"
-                },
-                "uuid": {
-                    "type": "string"
-                }
-            }
-        },
         "schemes.GetAllCargosResponse": {
             "type": "object",
             "properties": {
@@ -752,7 +695,7 @@
                     }
                 },
                 "draft_flight": {
-                    "$ref": "#/definitions/schemes.FlightShort"
+                    "type": "string"
                 }
             }
         },
@@ -798,6 +741,9 @@
                 },
                 "expires_in": {
                     "type": "integer"
+                },
+                "login": {
+                    "type": "string"
                 },
                 "role": {
                     "type": "integer"
